--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class="header__link" href="https://vk.com/id_69_tver/" target="_blank">
             <img src="./img/soc.png" width="25" height="25" class="d-inline-block align-top" alt="">
-            <a class="header__link4__desc">Напишите мне vk.com</a>
+            <a class="header__link4__desc" href="https://vk.com/id_69_tver" target="_blank">Напишите мне vk.com</a>
         </div>
     </div>
 
@@ -37,7 +37,7 @@
         <div class="search__form">
             <form id="search-form">
                 <input type="text" class="form-control" id='searchText' placeholder="Введите название фильма или сериала">
-                <button type="submit" class="btn btn-dark col-3">Найти</button>
+                <button type="submit" class="btn">Найти</button>
             </form>
         </div>
     </div>
@@ -56,7 +56,7 @@
 
     <footer class="footer">
         <div class="footer__text">
-	    Andranik Sarkisyan 2020
+	    Andranik Sarkisyan 2020  ||  andrewsarkisyan@gmail.com
         </div>
     </footer>
 
