--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Поиск трейлеров к вильмам и сериалам">
+    <meta property="og:title" content="Трейлер парк"/>
+    <meta property="og:description" content="Поиск трейлеров к вильмам и сериалам"/>
+    <meta property="og:image" content="./img/logo.jpg"/>
+    <meta property="og:type" content="profile"/>
+    <meta property="og:url" content= "https://andrewfromtver.github.io/trailerpark-rebranding/" />
     <link rel="shortcut icon" href="./img/favicon.png">
     <link rel="stylesheet" href="./style.css" type="text/css">
     <title>Трейлер-парк</title>
