--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
     </div>    
     <div id="movies" class="row"></div>
     <div class="main__section">
+        <div class="type">
+            <button class="btn_type" onclick="mv()">Фильмы</button>
+            <button class="btn_type" onclick="tv()">Сериалы</button>
+            <button class="btn_type" onclick="person()">Актеры</button>
+        </div>
         <div id="title__item"></div>
         <div id="item" class="container"></div>
         <div id="trailer" class="trailer"></div>
