--- a/index.html
+++ b/index.html
@@ -27,13 +27,10 @@
             <a class="header__link3__desc">Аналитика</a>
         </div>
     </div>
-    <div class="main__section__search">
-        <div class="search__form">
-            <form id="search-form">
-                <input type="text" class="form-control" id='searchText' placeholder="Введите название фильма или сериала">
-                <button type="submit" class="btn">Найти</button>
-            </form>
-        </div>
+    <form id="search-form" class="main__section__search">
+        <input type="text" class="form-control" id='searchText' placeholder="Введите название фильма или сериала">
+        <button type="submit" class="btn">Найти</button>
+    </form>
     </div>
     <div class="main__section__title">
         <div id="title"></div>
