--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         </div>
         <div id="title__item"></div>
         <div id="item" class="container"></div>
+        <div class="rec__list" id="movies__rec"></div> 
         <div id="trailer" class="trailer"></div>
         <div id="small__frame" class="small__frame"></div>
         <footer class="footer">
