--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="up__btn">
         <img src="./img/upBtn.png" onclick="up()">
     </div>
-    <div class="header">
+    <div class="header" id="top">
         <div class="header__link" onclick="show('multi', 'day', 'day')">
             <img src="./img/day.png" width="25" height="25" class="d-inline-block align-top" alt="">
             <a class="header__link1__desc">Топ на сегодня</a>
