--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <img src="./img/week.png" width="25" height="25" class="d-inline-block align-top" alt="">
             <a class="header__link2__desc">Топ за неделю</a>
         </div>
-        <div class="header__link"onclick="show('person', 'day')"">
+        <div class="header__link"onclick="topTable()"">
             <img src="./img/upBtn.png" width="25" height="25" class="d-inline-block align-top" alt="">
-            <a class="header__link3__desc">Актеры и режисеры</a>
+            <a class="header__link3__desc">Недельный топ 5</a>
         </div>
     </div>
     <form id="search-form" class="main__section__search">
