--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="header__link"onclick="topTable()"">
             <img src="./img/upBtn.png" width="25" height="25" class="d-inline-block align-top" alt="">
-            <a class="header__link3__desc">Недельный топ 5</a>
+            <a class="header__link3__desc">Тренды</a>
         </div>
     </div>
     <form id="search-form" class="main__section__search">
