--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <div id="item" class="container"></div>
         <div class="rec__list" id="movies__rec"></div> 
         <div id="trailer" class="trailer"></div>
+        <div id="trending" class="trending"></div>
         <div id="small__frame" class="small__frame"></div>
         <footer class="footer">
             <div class="footer__text">
