--- a/index.html
+++ b/index.html
@@ -54,6 +54,6 @@
             </div>
         </footer>
     </div>
-    <script src="./js/script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
