--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <tbody>
                     <td>
                         <form>
-                            <input class="form-control" id="login" type="login" maxlength="28" required="required" pattern="[A-Za-z0-9]{1,20}">
-                            <input class="form-control" id="password" type="password" autocomplete="off" maxlength="28" required="required" pattern="[A-Za-z0-9]{1,20}">
+                            <input class="form-control" id="login" placeholder="Логин" type="login" maxlength="28" required="required" pattern="[A-Za-z0-9]{1,20}">
+                            <input class="form-control" id="password" placeholder="Пароль" type="password" autocomplete="off" maxlength="28" required="required" pattern="[A-Za-z0-9]{1,20}">
                         </form>
                         <button class="btn_type" onclick="login()">Вход</button>
                         <button class="btn__guest" onclick="loginNouser()">Гостевой режим</button>
