--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             <input class="form-control" id="password" placeholder="Пароль" type="password" autocomplete="off" maxlength="28" required="required" pattern="[A-Za-z0-9]{1,20}">
                         </form>
                         <button class="btn_type" onclick="login()">Вход</button>
-                        <button class="btn__guest" onclick="loginNouser()">Гостевой режим</button>
+                        <button class="btn__guest" onclick="loginNouser()">Триал</button>
                     </td>
                 </tbody>
             </table>
