--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
         </div>
         <div class="header">
             <div class="header__link" onclick="show('multi', 'day', 'day')">
-                <img src="./img/day.png" width="25" height="25" class="d-inline-block align-top" alt="">
+                <img src="./img/day.png" width="25" height="25">
                 <a class="header__link1__desc">Топ на сегодня</a>
             </div>
             <div class="header__link" onclick="show('multi', 'week', 'week')">
-                <img src="./img/week.png" width="25" height="25" class="d-inline-block align-top" alt="">
+                <img src="./img/week.png" width="25" height="25">
                 <a class="header__link2__desc">Топ за неделю</a>
             </div>
-            <div class="header__link"onclick="topTable()"">
-                <img src="./img/upBtn.png" width="25" height="25" class="d-inline-block align-top" alt="">
+            <div class="header__link"onclick="topTable()">
+                <img src="./img/upBtn.png" width="25" height="25">
                 <a class="header__link3__desc">Тренды</a>
             </div>
             <div class="logout">
