--- a/index.html
+++ b/index.html
@@ -20,12 +20,11 @@
                 </thead>
                 <tbody>
                     <td>
-                        <form>
-                            <input class="form-control" id="login" placeholder="Логин" type="login" maxlength="28" required="required" pattern="[A-Za-z0-9]{1,20}">
-                            <input class="form-control" id="password" placeholder="Пароль" type="password" autocomplete="off" maxlength="28" required="required" pattern="[A-Za-z0-9]{1,20}">
+                        <form class="loginForm">
+                            <input class="form-control" id="login" placeholder="Логин" type="email" maxlength="28" required>
+                            <input class="form-control" id="password" placeholder="Пароль" type="password" autocomplete="off" maxlength="28" required>
+                            <button class="btn__guest">Вход</button>
                         </form>
-                        <button class="btn_type" onclick="">Вход</button>
-                        <button class="btn__guest" onclick="loginTrial()">Триал</button>
                     </td>
                 </tbody>
             </table>
@@ -37,15 +36,15 @@
         </div>
         <div class="header">
             <div class="header__link" onclick="show('multi', 'day', 'day')">
-                <img src="./img/day.png" width="25" height="25">
+                <img src="./img/day.png" width="25" height="25" class="d-inline-block align-top" alt="">
                 <a class="header__link1__desc">Топ на сегодня</a>
             </div>
             <div class="header__link" onclick="show('multi', 'week', 'week')">
-                <img src="./img/week.png" width="25" height="25">
+                <img src="./img/week.png" width="25" height="25" class="d-inline-block align-top" alt="">
                 <a class="header__link2__desc">Топ за неделю</a>
             </div>
             <div class="header__link"onclick="topTable()">
-                <img src="./img/upBtn.png" width="25" height="25">
+                <img src="./img/upBtn.png" width="25" height="25" class="d-inline-block align-top" alt="">
                 <a class="header__link3__desc">Тренды</a>
             </div>
             <div class="logout">
