--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
                             <button class="btn__guest">Вход</button>
                         </form>
                     </td>
+                    <a class="cheked">
+                        Запомнить
+                        <input class="chekbox" type="checkbox" name="option1" value="a1">
+                    </a>
                 </tbody>
             </table>
         </div>
