--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <td>
                         <form class="loginForm">
                             <input class="form-control" id="login" placeholder="e-mail" type="email" maxlength="28" required>
-                            <input class="form-control" id="password" placeholder="PIN-код" type="number" type="number" autocomplete="off" required>
+                            <input class="form-control" id="password" placeholder="PIN-код" type="password" type="number" autocomplete="off" required maxlength="4">
                             <button class="btn__guest">Вход</button>
                         </form>
                     </td>
