--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <tbody>
                     <td>
                         <form class="loginForm">
-                            <input class="form-control" id="login" placeholder="Логин" type="text" maxlength="10" required>
-                            <input class="form-control" id="password" placeholder="PIN-код" type="number" min="0" autocomplete="off" required>
+                            <input class="form-control" id="login" placeholder="Логин" type="text" maxlength="28" required>
+                            <input class="form-control" id="password" placeholder="PIN-код" type="password" autocomplete="off" required>
                             <button class="btn__guest">Вход</button>
                         </form>
                     </td>
