--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <input class="chekbox" type="checkbox" name="option1" value="a1">
                     </a>
                 </tbody>
-                <button class="btn__reg">Регистрация</button>
+                <button class="btn__reg" onclick="regUser">Регистрация</button>
             </table>
         </div>
     </div>
