--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <td>
                         <form class="loginForm">
                             <input class="form-control" id="login" placeholder="Логин" type="text" maxlength="28" required>
-                            <input class="form-control" id="password" placeholder="PIN-код" type="password" autocomplete="off" required>
+                            <input class="form-control" id="password" oninput="maxLengthCheck(this)" maxlength="4" pattern="[0-9]{,4}" placeholder="PIN-код" type="password" autocomplete="off" required>
                             <button class="btn__guest">Вход</button>
                         </form>
                     </td>
