--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
                 <img src="./img/upBtn.png" width="25" height="25" class="d-inline-block align-top" alt="">
                 <a class="header__link3__desc">Тренды</a>
             </div>
+            <div class="header__liked"onclick="likedByUser()">
+                <img src="./img/liked.png" width="25" height="25" class="d-inline-block align-top" alt="">
+            </div>
             <div class="logout">
             </div>
         </div>
