--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                         <form class="loginForm">
                             <input class="form-control" id="login" placeholder="Логин" type="text" maxlength="28" required>
                             <input class="form-control" id="password" oninput="maxLengthCheck(this)" maxlength="4" placeholder="PIN-код" type="password" autocomplete="off" required>
-                            <button class="btn__guest">Вход</button>
                         </form>
+                        <button class="btn__guest" onclick="login()">Вход</button>
                     </td>
                     <a class="cheked">
                         Запомнить
