--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <td>
                         <form class="loginForm">
                             <input class="form-control" id="login" placeholder="Логин" type="text" maxlength="28" required>
-                            <input class="form-control" id="password" oninput="maxLengthCheck(this)" maxlength="4" placeholder="PIN-код" type="password" autocomplete="off" required>
+                            <input class="form-control" id="password" oninput="maxLengthCheck(this)" maxlength="4" placeholder="PIN-код (4 символа)" type="password" autocomplete="off" required>
                         </form>
                         <button class="btn__guest" onclick="login()">Вход</button>
                     </td>
