--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
                 <img src="./img/day.png" width="25" height="25">
                 <a class="header__link1__desc">Популярное сегодня</a>
             </div>
-            <div class="header__link" onclick="filter()">
+            <div class="header__link" onclick="genChek()">
                 <img src="./img/search.png" width="25" height="25">
                 <a class="header__link2__desc">Расширенный поиск</a>
             </div>
-            <div class="header__link"onclick="filter()">
+            <div class="header__link"onclick="contacts()">
                 <img src="./img/contacts.png" width="25" height="25">
                 <a class="header__link3__desc">Обратная связь</a>
             </div>
@@ -63,6 +63,7 @@
             <input type="text" class="form-control" id='searchText' placeholder="Введите название фильма или сериала">
             <button type="submit" class="btn">Найти</button>
         </form>
+
         <div class="main__section__title">
             <div id="title"></div>
         </div>    
