--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'"/>
+    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 
+        'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'"/>
     <meta name="description" content="Поиск трейлеров к фильмам и сериалам">
     <link rel="shortcut icon" href="./img/favicon.png">
     <link rel="stylesheet" href="./style.css" type="text/css">
@@ -21,8 +22,10 @@
                 <tbody>
                     <td>
                         <form class="loginForm">
-                            <input class="form-control" id="login" placeholder="Логин" type="text" maxlength="28" required>
-                            <input class="form-control" id="password" oninput="maxLengthCheck(this)" maxlength="4" placeholder="PIN-код (4 символа)" type="password" autocomplete="off" required>
+                            <input class="form-control" id="login" placeholder="Логин" type="text" 
+                                maxlength="28" required>
+                            <input class="form-control" id="password" oninput="maxLengthCheck(this)" maxlength="4" 
+                                placeholder="PIN-код (4 символа)" type="password" autocomplete="off" required>
                         </form>
                         <button class="btn__guest" onclick="login()">Вход</button>
                     </td>
