--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
             </footer>
         </div>
     </div>
-    <script src="./ui_control.js"></script>
-    <script src="./api_engine.js"></script>
-    <script src="./authentication.js"></script>
+    <script src="./js/ui_control.js"></script>
+    <script src="./js/api_engine.js"></script>
+    <script src="./js/authentication.js"></script>
 </body>
 </html>
