--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
         </div>
         <div class="header">
             <div class="header__link" onclick="show('multi', 'day', 'day')">
-                <img src="./img/day.png" width="20" height="20">
+                <img src="./img/day.png" width="15" height="15">
                 <a class="header__link1__desc">Популярное сегодня</a>
             </div>
             <div class="header__link" onclick="genChek()">
-                <img src="./img/search.png" width="20" height="20">
+                <img src="./img/search.png" width="15" height="15">
                 <a class="header__link2__desc">Расширенный поиск</a>
             </div>
             <div class="header__link"onclick="contacts()">
-                <img src="./img/contacts.png" width="20" height="20">
+                <img src="./img/contacts.png" width="15" height="15">
                 <a class="header__link3__desc">Обратная связь</a>
             </div>
             <div class="header__liked"onclick="likedByUser(true)">
-                <img src="./img/liked.png" width="23" height="23">
+                <img src="./img/liked.png" width="18" height="18">
             </div>
             <div class="logout">
             </div>
@@ -75,7 +75,7 @@
             <div class="type">
                 <button class="btn_type" onclick="show('movie', 'week')">Фильмы</button>
                 <button class="btn_type" onclick="show('tv', 'week')">Сериалы</button>
-                <button class="btn_type" onclick="show('person', 'week')">Актеры и режисеры</button>
+                <button class="btn_type" onclick="show('person', 'week')">Актеры</button>
             </div>
             <div id="title__item"></div>
             <div id="item" class="container"></div>
