--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 
         'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'"/>
     <meta name="description" content="Поиск трейлеров к фильмам и сериалам">
+    <meta property="og:title" content="Трейлеры к фильмам и сериалам">
+    <meta property="og:site_name" content="Trailerpark">
+    <meta property="og:url" content="https://andrewfromtver.github.io/trailerpark-rebranding/">
+    <meta property="og:description" content="Поиск трейлеров к фильмам и сериалам">
+    <meta property="og:image" content="./img/404.gif">
     <link rel="shortcut icon" href="./img/favicon.png">
     <link rel="stylesheet" href="./style.css" type="text/css">
     <title>Трейлер-парк</title>
