--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <img src="./img/upBtn.png" onclick="up()">
         </div>
         <div class="header">
-            <div class="header__link" onclick="show('multi', 'day', 'day')">
+            <div class="header__link" onclick="show('multi', 'day')">
                 <img src="./img/day.png" width="18" height="18">
                 <a class="header__link1__desc">Популярное сегодня</a>
             </div>
