--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:site_name" content="Trailerpark">
     <meta property="og:url" content="https://andrewfromtver.github.io/trailerpark-rebranding/">
     <meta property="og:description" content="Поиск трейлеров к фильмам и сериалам">
-    <meta property="og:image" content="./img/logo.png">
+    <meta property="og:image" content="./img/logo.jpg">
     <link rel="shortcut icon" href="./img/favicon.png">
     <link rel="stylesheet" href="./style.css" type="text/css">
     <title>Трейлер-парк</title>
