--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
             <img src="./img/upBtn.png" onclick="up()">
         </div>
         <div class="header">
-            <div class="header__link" onclick="show('multi', 'day')">
+            <div class="header__link" id="main" onclick="show('multi', 'day')">
                 <img src="./img/day.png" width="18" height="18">
                 <a class="header__link1__desc">Популярное сегодня</a>
             </div>
-            <div class="header__link" onclick="genChek()">
+            <div class="header__link" id="search" onclick="genChek()">
                 <img src="./img/search.png" width="18" height="18">
                 <a class="header__link2__desc">Расширенный поиск</a>
             </div>
-            <div class="header__link"onclick="contacts()">
+            <div class="header__link" id="feedback" onclick="contacts()">
                 <img src="./img/contacts.png" width="18" height="18">
                 <a class="header__link3__desc">Обратная связь</a>
             </div>
