--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <img src="./img/day.png" width="18" height="18">
                 <a class="header__link1__desc">Популярное сегодня</a>
             </div>
-            <div class="header__link" id="search" onclick="genChek()">
+            <div class="header__link" id="advancedSearch" onclick="genChek()">
                 <img src="./img/search.png" width="18" height="18">
                 <a class="header__link2__desc">Расширенный поиск</a>
             </div>
